# redis-canal-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: a.rs  canal.rs  constants.rs  filter.rs  helper.rs  lib.rs  main.rs  parser.rs  resp.rs  types.rs
src/formatter/: json.rs  mod.rs  plain.rs  protocol.rs
tests/: lib.rs
