[package]
name = "redis-canal-rs"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
lzf = "0.3.1"
serde = "1.0.104"
serde_json = "1.0.47"
byteorder = "^0.5"
regex = "1.3.4"
getopts = "0.2.19"
bytes = "0.5"
redis = "0.15.1"
hex = "0.4.2"

